objects/TAV4__Alignment_Update__c.object
<CustomObject>
    <fields>
        <fullName>TAV4__Alignment__c</fullName>
        <label>Alignment</label>
        <referenceTo>TAV4__Alignment__c</referenceTo>
        <relationshipLabel>Alignment Updates</relationshipLabel>
        <relationshipName>Alignment_Updates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>TAV4__Apex_Job_Id__c</fullName>
        <description>The Id of the currently executing Apex Job</description>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAV4__Effective_Date__c</fullName>
        <description>The date/time that the updates  are to be implemented.</description>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TAV4__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposed</fullName>
                    <default>true</default>
                    <label>Proposed</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Alignment Update</label>
    <listViews>
        <fullName>TAV4__All</fullName>
        <columns>NAME</columns>
        <columns>TAV4__Alignment__c</columns>
        <columns>TAV4__Effective_Date__c</columns>
        <columns>TAV4__Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Alignment Update Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alignment Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>